<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc_array</name>
  <version>1.0.0</version>
  <description>The lidar_centerpoint package</description>
  <maintainer email="yusuke.muramatsu@tier4.jp">Yusuke Muramatsu</maintainer>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>
  <license>Apache License 2.0</license>


  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages>rosidl_default_generators</rosidl_interface_packages>
  </export>
</package>
